test/vlt/01-syntax/block/block.expected
let () = Vlt.Logger.prepare "Block"
let () =
  if Vlt.Logger.check_level "Block" Vlt.Level.INFO
  then
    (Printf.printf "FOO\n";
     Vlt.Logger.logf "Block" Vlt.Level.INFO ~file:"block.ml" ~line:6
       ~column:4 ~properties:[] ~error:None "BAR";
     if Vlt.Logger.check_level "Block" Vlt.Level.DEBUG
     then
       Vlt.Logger.logf "Block" Vlt.Level.DEBUG ~file:"block.ml" ~line:7
         ~column:4 ~properties:[] ~error:None "BAZ"
     else ())
  else ()
let () =
  if Vlt.Logger.check_level "Block" Vlt.Level.DEBUG
  then
    Vlt.Logger.log "Block" Vlt.Level.WARN ~file:"block.ml" ~line:11 ~column:2
      ~properties:[] ~error:None "FOO"
  else ()
let () = ()
